--- a/Bachelor_Net60/appsettings.json
+++ b/Bachelor_Net60/appsettings.json
@@ -1,8 +1,9 @@
 {
   "Database": {
     "Type": "MySQL",
-    "ConnectionString": {
-      "MySQL": "server=localhost;uid=root;pwd=1h9e8d7;database=weather;"
+    "ConnectionStrings": {
+      "MySQL": "server=localhost;uid=root;pwd=1h9e8d7;database=cifrovictest;",
+      "MSSQL": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=cifrovictest;Integrated Security=True"
     }
   }
 }
