Заготовка главного окна. Первый шаг.

--- a/Bachelor_Net60/appsettings.json
+++ b/Bachelor_Net60/appsettings.json
@@ -3,6 +3,7 @@
     "Type": "MySQL",
     "ConnectionStrings": {
       "MySQL": "server=localhost;uid=root;pwd=1h9e8d7;database=cifrovictest;",
+      //"MySQL": "server=localhost;database=cifrovictest;",
       "MSSQL": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=cifrovictest;Integrated Security=True"
     }
   }
