--- a/Bachelor_Net60/Bachelor_Net60.csproj
+++ b/Bachelor_Net60/Bachelor_Net60.csproj
@@ -31,6 +31,10 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Resources\Templates\" />
+	</ItemGroup>
 	
 
 
