--- a/Bachelor_Net60/Bachelor_Net60.csproj
+++ b/Bachelor_Net60/Bachelor_Net60.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FontAwesome5" Version="2.1.6" />
+    <PackageReference Include="FontAwesome6.Fonts" Version="2.0.6" />
+    <PackageReference Include="FontAwesome6.Svg" Version="2.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.5" />
